Fixed auto updating and added manual update of data

--- a/Hjemmesentral/app/src/main/res/layout/activity_main.xml
+++ b/Hjemmesentral/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:weightSum="100"
+    android:keepScreenOn="false"
     android:id="@+id/root_container"
     tools:context=".activity.MainActivity">
 
