--- a/Hjemmesentral/app/src/main/res/layout/fragment_yr.xml
+++ b/Hjemmesentral/app/src/main/res/layout/fragment_yr.xml
@@ -5,11 +5,23 @@
     android:layout_height="match_parent"
     tools:context=".fragment.YrFragment">
 
-    <android.support.v7.widget.RecyclerView
-        tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:listitem="@layout/yr_view_holder"
-        android:id="@+id/recyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.homecentral.jrs.hjemmesentral.view.UpdateBar
+            android:id="@+id/update_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <android.support.v7.widget.RecyclerView
+            tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:listitem="@layout/yr_view_holder"
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
 
 </FrameLayout>
